# yew-spotify

./: Cargo.toml  package.json
src/: main.rs
src/components/: mod.rs  searchbar.rs  sidebar.rs
